<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="screen_name">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="streamer_button">SPOTIFY STREAMER</string>
    <string name="scoresapp_button">SCORES APP</string>
    <string name="libraryapp_button">LIBRARY APP</string>
    <string name="builditbigger_button">BUILD IT BIGGER</string>
    <string name="xyzreader_button">XYZ READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
</resources>
